--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@ $highlightColor2: #333333;
 
 @import url('https://fonts.googleapis.com/css2?family=Markazi+Text:wght@500&family=Open+Sans:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
-@import "../node_modules/react-alice-carousel/lib/scss/alice-carousel.scss";
+@import '../node_modules/react-alice-carousel/lib/scss/alice-carousel.scss';
 
 // for lead text (for descriptive items to catch attention !  exp CTA , home page) and card title , nav item
 $fontTitle: 'Markazi Text', serif;
@@ -19,7 +19,14 @@ $fontParagraphStyle: 'Karla', sans-serif;
 
 // mixin and extension
 %section2 {
-    background-image: radial-gradient(circle, #f4ce14, #d4862c, #984e34, #4f2627, #000000);
+	background-image: radial-gradient(
+		circle,
+		#f4ce14,
+		#d4862c,
+		#984e34,
+		#4f2627,
+		#000000
+	);
 }
 @mixin font($font, $size, $height) {
 	font-family: $font;
@@ -44,6 +51,9 @@ $fontParagraphStyle: 'Karla', sans-serif;
 	padding-left: 0;
 	padding-right: 0;
 }
+body {
+	background: $highlightColor1;
+}
 a {
 	text-decoration: none;
 	color: inherit;
@@ -65,14 +75,33 @@ a {
 @import './components/Header/Header';
 @import './components/Main/main';
 // queries
+// xl
+@media screen and (min-width : 1281px) {
+    .section3-img{
+        grid-template-columns: repeat(3 , 1fr);
+    }
+}
+// md
 @media screen and (max-width: 839px) {
 	@import './components/Nav/NavResponsive_md';
 	@import './components/Header/Header-md-responsive';
 	@import './components/Main/main_md';
-    @import './components/Main/section2_md';
+    .section3-container {
+        flex-direction: column;
+    }
+	.section3-img {
+        margin-top: 40px;
 
+	}
 }
-
+// xs
 @media screen and (max-width: 350px) {
 	@import './components/Nav/NavResponsive_xs';
+    .section3-container {
+        padding: 0;
+        padding-top: 40px;
+    }
+    .section3-img {
+        grid-template-columns: repeat(1 , 1fr);
+    }
 }
