--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -1,95 +1,105 @@
-header {
-    background-color: $primaryColor1;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 31px 60px 36px;
-    user-select: none;
+$headerPadding: 10px 31px 60px 36px;
+
+@mixin headerSelector($bgcolor, $padding) {
+	background-color: $bgcolor;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: $padding;
+	user-select: none;
+}
+@mixin headerInfoAnimation() {
+	h1.active,
+	h2.active {
+		animation: slideY 1s ease-in-out forwards;
+	}
+    p {
+		animation: slideX 1s ease-in-out forwards;
+    }
+}
+@mixin headerInfo() {
+	flex-basis: 100%;
+	max-width: 800px;
+	margin-right: 20px;
+	h1 {
+		color: $primaryColor2;
+		@include font($fontTitle, clamp(40px, 10vw, 80px), inherit);
+	}
+	h2 {
+		color: $highlightColor1;
+		@include font($fontTitle, clamp(30px, 5vw, 50px), inherit);
+	}
+    h1,
+	h2 {
+		transform: translateY(-120%);
+	}
+	p {
+		color: $highlightColor1;
+		@include font($fontTitle, 22px, 1.4);
+		margin-top: 20px;
+		transform: translateX(-100%);
+	}
 
 }
+header {
+	@include headerSelector($primaryColor1, $headerPadding);
+}
+
 .header-info {
-    flex-basis: 100%;
-    max-width: 800px;
-    margin-right: 20px;
-    h1 {
-        color : $primaryColor2;
-        @include font($fontTitle , clamp(40px , 10vw , 80px) , inherit);
-
-    }
-    h2 {
-        color : $highlightColor1;
-        @include font($fontTitle , clamp(30px , 5vw , 50px) , inherit);
-
-    }
-    p {
-        color: $highlightColor1;
-        @include font($fontTitle , 22px , 1.4);
-        margin-top: 20px;
-        transform: translateX(-100%);
-    animation: slideX 1s ease-in-out forwards;
-
-    }
-    h1 , h2 {
-        transform: translateY(-100%);
-    animation : slideY 1s ease-in-out forwards;
-
-    }
-
-
+	@include headerInfo();
+    @include headerInfoAnimation();
 }
 .header-img {
-    flex-basis: 100%;
-    max-width: 500px;
-    position: relative;
-    img {
-        width: 100%;
-        height: 540px;
-        object-fit: cover;
-        border-radius: 20px;
-        transform: translateY(-100%);
-
-    }
-    button {
-        position: absolute;
-        top: 128%;
-        right: 50%;
-        transform: translate(50%,50%);
-    }
+	flex-basis: 100%;
+	max-width: 500px;
+	position: relative;
+	img {
+		width: 100%;
+		height: 540px;
+		object-fit: cover;
+		border-radius: 20px;
+		transform: translateY(-100%);
+	}
+	button {
+		position: absolute;
+		top: 128%;
+		right: 50%;
+		transform: translate(50%, 50%);
+	}
 }
 .header-img.active img {
-    animation : imgAnimation 2s ease-in-out forwards;
+	animation: imgAnimation 2s ease-in-out forwards;
 }
 @keyframes imgAnimation {
-    0% {
-        transform: translateY(-100%);
-    }
-    100% {
-        transform: translateY(35%);
-
-    }
+	0% {
+		transform: translateY(-100%);
+	}
+	100% {
+		transform: translateY(35%);
+	}
 }
 @keyframes slideY {
-    0%{
-        transform: translateY(-100%);
-    }
-    100% {
-        transform: translateY(0);
-    }
+	0% {
+		transform: translateY(-100%);
+	}
+	100% {
+		transform: translateY(0);
+	}
 }
 @keyframes slideX {
-    0% {
-        transform: translateX(-100%);
-    }
-    100% {
-        transform: translateX(0);
-    }
+	0% {
+		transform: translateX(-100%);
+	}
+	100% {
+		transform: translateX(0);
+	}
 }
 @keyframes fadeIn {
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
