--- a/src/components/Main/_main_md.scss
+++ b/src/components/Main/_main_md.scss
@@ -2,6 +2,6 @@ main {
     margin-top: 20px;
 }
 
-@import './section1_md';
-@import './section2_md';
-@import './section3_md';
+@import './section1/section1_md';
+@import './section2/section2_md';
+@import './section3/section3_md';
