--- a/src/components/Main/_main.scss
+++ b/src/components/Main/_main.scss
@@ -1,3 +1,3 @@
-@import './section1';
-@import './section2';
-@import './section3';
+@import './section1/section1';
+@import './section2/section2';
+@import './section3/section3';
