--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -1,24 +1,98 @@
 footer {
-    margin-top: auto;
-    min-height: 306px;
-    background:  #000;
-    position: relative;
-    padding: 10px clamp(10px , 5vw , 50px);
-    display: flex;
-    flex-direction: column;
-    color: $highlightColor1;
+	margin-top: auto;
+	min-height: 306px;
+	background: #000;
+	// position: relative;
+	padding: 30px clamp(30px, 5vw, 50px) 10px clamp(10px, 5vw, 50px);
 
 }
-// svg {
-//     width: 100%;
-//     height: 100%;
+.footer-container {
+	max-width: 1280px;
+	width: 100%;
+	height:100%;
+	min-height: 306px;
 
-// }
-// svg path {
-//     fill: #37383C;
-//     width: 100%;
-//     height: 100%;
-//     position: absolute;
-//     top : 0;
+	align-items: stretch;
+	margin: auto;
+	color: $highlightColor1;
+    display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+    @extend %footerHoverLink;
+}
+%footerHoverLink {
+    a {
+        transition: all 300ms ease-in;
+        &:hover {
+            color : #3bc4ff;
+        }
+    }
 
-// }
+}
+.footer-bloc-1 {
+    display: grid;
+    grid-template-columns: repeat(4 ,1fr);
+    grid-gap: 40px;
+	&-child-1 {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+		}
+	}
+	&-child-2 {
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+		p {
+			display: flex;
+			gap: 10px;
+		}
+        &-icon {
+			width: fit-content;
+			margin-right: 10px;
+            fill: $highlightColor1;
+        }
+        &-text {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            word-wrap: break-word;
+        }
+	}
+	&-child-3 {
+		ul {
+			list-style: none;
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
+		}
+	}
+	&-child-4 {
+		display: flex;
+		flex-direction: column;
+		gap: 25px;
+	}
+}
+
+.footer-bloc-2 {
+	display: flex;
+	&-child-1 {
+		margin-right: 20px;
+	}
+	&-child-2 {
+        margin-left: auto;
+		ul {
+			list-style: none;
+			display: flex;
+			gap: 10px;
+		}
+	}
+}
+
+
+@import './form';
+@import './social';
