--- a/src/components/Main/section3/_section3.scss
+++ b/src/components/Main/section3/_section3.scss
@@ -10,6 +10,7 @@
 	flex-basis: 100%;
 	grid-template-columns: repeat(2, 1fr);
 	grid-gap: 10px;
+	overflow: hidden;
 	img {
         transition: transform 300ms ease-out ;
 		&:hover {
