--- a/src/components/Footer/_form.scss
+++ b/src/components/Footer/_form.scss
@@ -1,10 +1,4 @@
-form {
-	display: flex;
-	gap: 20px;
-	flex-direction: column;
-	justify-content: space-between;
-}
-input[type='email'] {
+@mixin inputCss ($outline) {
 	padding: 10px 10px;
 	border: none;
 	border-radius: 5px;
@@ -14,26 +8,41 @@ input[type='email'] {
 	font-size: 20px;
 	line-height: inherit;
 	transition: outline 300ms ease-in;
-    outline: none;
-    &.invalid {
-        outline: 2px solid hsl(0, 71%, 57%);
-    }
-    &.valid {
-        outline: 2px solid hsl(50, 91%, 52%);
-    }
-}
-input[type='submit'] {
-	padding: 10px 10px;
-	border: none;
-	border-radius: 5px;
-	background: #f4ce14;
-	cursor: pointer;
-	font-family: 'Markazi Text', serif;
-	font-size: 20px;
-	line-height: inherit;
-	transition: background 200ms ease-in;
-    &:active {
-        background: #ee9972;
-    }
+	outline: $outline;
+	&.invalid {
+		outline: 2px solid hsl(0, 71%, 57%);
+	}
+	&.valid {
+		outline: 2px solid hsl(50, 91%, 52%);
+	}
 }
 
+@mixin inputSubmit () {
+		padding: 10px 10px;
+		border: none;
+		border-radius: 5px;
+		background: #f4ce14;
+		cursor: pointer;
+		font-family: 'Markazi Text', serif;
+		font-size: 20px;
+		line-height: inherit;
+		transition: background 200ms ease-in;
+		&:active {
+			background: #ee9972;
+		}
+	
+}
+
+form.form-footer {
+	display: flex;
+	gap: 20px;
+	flex-direction: column;
+	justify-content: space-between;
+	input{
+		@include inputCss(none);
+	}
+	input[type = "submit"] {
+		@include inputSubmit();
+	}
+
+}
