--- a/src/components/App/_bookingform.scss
+++ b/src/components/App/_bookingform.scss
@@ -15,6 +15,8 @@ form.booking-form {
 	border-radius: 10px;
 	padding: 20px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	overflow: hidden;
+	background: $highlightColor1;
 	input {
 		@include inputCss(1px solid rgba(0, 0, 0, 0.3));
 		cursor: pointer;
