--- a/src/components/App/_booking_slot.scss
+++ b/src/components/App/_booking_slot.scss
@@ -1,12 +1,10 @@
 .booking-slot {
     padding: 20px;
     background: $highlightColor1;
-    // border-radius: 10px;
-    // box-shadow: 1px 0px 10px #20262e;
+    border-radius: 10px;
+    box-shadow: 1px 0px 10px #20262e;
     color : $highlightColor2;
-    position: absolute;
-    right: 0;
-    top: 0;
+
 }
 
 .submit-info {
