--- a/src/components/App/_reservations.scss
+++ b/src/components/App/_reservations.scss
@@ -3,9 +3,9 @@
     gap: 30px;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
+    padding-top: 30px;
     background-color: $highlightColor2;
-    position: relative;
 }
 
 
