add active class navLink on nav items

--- a/src/App.css
+++ b/src/App.css
@@ -274,10 +274,14 @@ nav ul.navbar-nav li.nav-item {
 }
 
 .nav-link {
-  transition: color 300ms ease-in;
+  transition: color 200ms ease-in;
 }
 .nav-link:hover {
   color: #495e57;
+}
+
+.nav-link.active {
+  color: #ee9972;
 }
 
 .nav-btn {
@@ -793,7 +797,7 @@ form.form-footer input[type=submit]:active {
   align-items: center;
   min-height: 100vh;
   padding-top: 30px;
-  background-color: #333333;
+  background: #333333;
 }
 
 form.booking-form {
