--- a/src/components/App/_reservations.scss
+++ b/src/components/App/_reservations.scss
@@ -5,7 +5,7 @@
     align-items: center;
     min-height: 100vh;
     padding-top: 30px;
-    background-color: $highlightColor2;
+    background: $highlightColor2;
 }
 
 
